Add Terraform section

--- a/4.terraform.md
+++ b/4.terraform.md
@@ -5,7 +5,7 @@ mkdir terraform_folder
 cd terraform_folder
 ```
 
-Install package
+Install package, replace with the version. Follow [here](https://developer.hashicorp.com/terraform/install)
 ```
 wget https://releases.hashicorp.com/terraform/<version>/terraform_<version>_linux_amd64.zip
 ```
